<resources>
    <string name="app_name">MobilneAplikacijeProjekat</string>

    <string name="login_title">Welcome\nYou have account\nLogin</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>

    <string name="register_title">Welcome\nYou do not have an account?\nRegister</string>
    <string name="email_hint">Email</string>
    <string name="create_account_btn">Create account</string>
<<<<<<< HEAD
=======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> d8badaf (Initial commit - MobileAplikacijeProjekat)


</resources>